# semantic-search-engine

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: auto_assign.yml  ci.yml
tests/: test_main.py
